# opengl_wrapper

./: .clang-format  CMakeLists.txt  README.md  apigl.h
buffers/: attribute_layout.h  ibo.h  vbo.cpp  vbo.h
src/: CMakeLists.txt  apigl.h  bytes.h
src/buffers/: attribute_layout.h  ibo.cpp  ibo.h  vao.cpp  vao.h  vbo.h
src/shaders/: shader.h  shader_program.cpp  shader_program.h
